# fast5_rekindler

./: .cruft.json  .gitignore  404.html  CHANGELOG.md  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: test.yml
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/fast5_rekindler/: bam.py  cleanup.py  cli.py  collate.py  fast5_rekindler.code-workspace  index.py  join_dbs.py  logger_config.py  ont-tails-delete-later.py  process_pod5.py  raw_fast5.py  utils.py
tests/: test_index.py
