[tool.poetry]
name = "fast5_rekindler"
version = "0.0.4"
description = "Collates information from BAM and POD5 files and generates FAST5 files for use in legacy tools such as tailfindr."
authors = [
    "Adnan M. Niazi <adnaniazi@gmail.com>",
]
license = "MIT"
readme = "README.md"
documentation = "https://adnaniazi.github.io/fast5_rekindler"
homepage = "https://adnaniazi.github.io/fast5_rekindler"
repository = "https://github.com/adnaniazi/fast5_rekindler"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "fast5_rekindler", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
loguru = "^0.7.2"
ont-fast5-api = "^4.1.1"
mpire = "^2.8.0"
pod5 = "^0.2.4"
pysam = "^0.22.0"
click = "^8.1.7"
pexpect = "^4.8.0"
types-toml = "^0.10.8.7"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-eradicate = "*"
flake8-logging-format = "*"
isort = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pymdown-extensions = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
python-kacl = "*"
pyupgrade = "*"
tryceratops = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py39"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov fast5_rekindler \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true

[tool.poetry.scripts]
fast5_rekindler = "fast5_rekindler.cli:fast5_rekindler"
